fix: :bug: Regex error fixed in MethodCallValidator